# intro-to-unit-testing-workshop

./: CMakeLists.txt  README.md
.github/workflows/: examples-ci.yml
calculator/: CMakeLists.txt  calculator_main.cpp
calculator/include/: calculator.h
calculator/src/: calculator.cpp
calculator/test/: CMakeLists.txt  calculator_test.cpp
camera/: CMakeLists.txt  camera_main.cpp
camera/camera_power_controller/: CMakeLists.txt
camera/camera_power_controller/include/: CameraPowerController.h
camera/camera_power_controller/src/: CameraPowerController.cpp
camera/camera_power_controller/test/: CMakeLists.txt  CameraPowerController_test.cpp
camera/camera_power_controller/test/mocks/: MockSerialPortManager.h
camera/libraries/SerialPortManager/: CMakeLists.txt
camera/libraries/SerialPortManager/include/: AsioSerialPortManager.h
camera/libraries/SerialPortManager/public/: SerialPortManager.h
camera/libraries/SerialPortManager/src/: AsioSerialPortManager.cpp
